Tenancy
* Tenancy entity and reference it to Application User entity

* Rename Application User entity to User

* Rename Application User to User

* Tenancy Service and Repository

* Change user registration to class and add optional company name field

* Add tenancy when signup

* Return tenancy in JWT

* Update readme

* Fix test error